--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 MONGO_URI=mongodb+srv://ssandeepachari1:F2sF9CUfntm91eLm@admissionform.ibkgb.mongodb.net/
-FRONTEND_URL=https://task-30-wjdc.vercel.app
+FRONTEND_URL=https://task-30-4rxz.vercel.app
